Correted the docker file on notebook to reflect the underlying Docker file

--- a/r_bring_your_own.ipynb
+++ b/r_bring_your_own.ipynb
@@ -276,7 +276,7 @@
     "    r-base-dev \\\n",
     "    ca-certificates\n",
     "\n",
-    "RUN R -e \"install.packages(c('mda', 'plumber'), repos='https://cloud.r-project.org')\"\n",
+    " RUN R -e \"install.packages(c('mda', 'plumber','aws.s3'), repos='https://cloud.r-project.org')\"\n",
     "\n",
     "COPY mars.R /opt/ml/mars.R\n",
     "COPY plumber.R /opt/ml/plumber.R\n",
